--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class ="header__logo_text"><h1 class="header__logo_text_h1">IC "Repair Design Project"</h1></div>
-        <div class="header__nav"> <div class="header__nav_element">HOME</div>
+        <div class="header__nav"> <div class="header__nav_element header__nav_first">HOME</div>
                                   <div class="header__nav_element">PROJECTS</div>
                                   <div class="header__nav_element">MEASUREMENT</div>
                                   <div class="header__nav_element">TEAM</div>
@@ -28,8 +28,8 @@
                 <div class="main__section1_bg_photo-black">
                         <div class="section1_text-big">
                             <span class="section1_text-big-white">Turnkey Repair in the<br> city of </span><span class="section1_text-big-gold">Rostov-on-Don</span></div>
-                        <div class="section1_text-small">Get ready-made turnkey repairs on time<br>
-                            with work time saving up to 45 days and 20% from<br>
+                        <div class="section1_text-small">Get ready-made turnkey repairs on time
+                            with work time saving up to 45 days and 20% from
                             cost of materials due to the organization of work</div>
                         <div class="section1_button">
                             <button class="section1_button-first">CALCULATE THE COST</button>
@@ -83,15 +83,16 @@
                 <div>Rostov-on-Don Patriotic</div>
             </div>
             <div class="main__section2_img">
+                <div class="main__section2_circle-first"><img src="assets/images/left1.png" alt="left"></div>
+                <div class="main__section2_circle-second"><img src="assets/images/right2.png" alt="right"></div>
                 <img src="assets/images/1.png" alt="room">
-                <img src="assets/images/2.png" alt="room">
+                <img class="room2_section2" src="assets/images/2.png" alt="room">
                 <div class="main__section2_img-circle"><span><img src="assets/images/right2.png" alt="right"></span></div>
             </div>
         </div>
         <div class="main__section3">
                 <div class="main_section3-text">online control<div class="main_section3-img"><img src="assets/images/video.png" alt="video"></div></div>
-                <div class="main_section3-youtube"><iframe width="817" height="434" src="https://www.youtube.com/embed/lJIrF4YjHfQ" frameborder="0" allow="accelerometer; autoplay; 
-                encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="main_section3-youtube"><iframe width="817" height="434" src="https://www.youtube.com/embed/lJIrF4YjHfQ" allow="accelerometer; autoplay;encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
         <div class="main-wrapper">
         <div class="main__section4">
@@ -102,16 +103,16 @@
             </div>
             <div class="main__section4_line"></div>
             <div class="main__section4_form">
-                <form class="main__section4_form-flex" action="">
+                <form class="main__section4_form-flex" action="#">
                     <div>
                         <span class="main__section4_form-text">Name</span>
-                        <div><input type="text" name="name" id="" placeholder="What's is your name"></div>
+                        <div><input type="text" name="name"  placeholder="What's is your name"></div>
                     </div>
                     <div>
                         <span class="main__section4_form-text">Phone</span>
-                        <div><input type="tel" name="number" id="" placeholder="Your phone number"></div>
+                        <div><input type="tel" name="number"  placeholder="Your phone number"></div>
                     </div>
-                    <input type="submit" name="submit" id="" value="Submit">
+                    <input type="submit" name="submit" value="Submit">
                 </form> 
                 <div class="main__section4_checkbox-text">
                     <input type="checkbox" checked >I agree to the processing of personal data
@@ -178,13 +179,13 @@
             <div class="main__section6_form">
                 <div class="main__section6_form-text">Leave a request for free
                 departure of the measurer</div> 
-                <form action="">
+                <form action="#">
                 <span>Name</span>
-                <div><input type="text" name="Name" id="" placeholder="What is your name:"></div>
+                <div><input type="text" name="Name" placeholder="What is your name:"></div>
                 <span>Phone</span>
-                <div><input type="tel" name="Phone" id="" placeholder="Your phone number:"></div>
+                <div><input type="tel" name="Phone" placeholder="Your phone number:"></div>
                 <span>Email</span>
-                <div><input type="email" name="Email" id="" placeholder="Your email:"></div>
+                <div><input type="email" name="Email" placeholder="Your email:"></div>
                 <div class="main__section6_checkbox-text">
                 <input type="checkbox" checked>I agree to the processing of personal data
                 </div>
@@ -197,9 +198,13 @@
         </div>
          <div class="main__section7">
                 <div class="main__section7_bg_photo-black"> 
-                    <div class="main__section7_text-big">We realize your<br> wildest fantasies</div>
+                    <div class="main__section7_text-big">
+                        <div class="main__section7_circle-first"><img src="assets/images/left1.png" alt="left"></div>
+                        <div class="main__section7_circle-second"><img src="assets/images/right2.png" alt="right"></div>
+                        We realize your<br> wildest fantasies <img src="assets/images/bg7.png" alt="room-small"> 
+                    </div>
                     <ul>
-                        <li><a href="#">American classic</a></li>
+                        <li><a id="main__section7_first" href="#">American classic</a></li>
                         <li><a href="#">Empire</a></li>
                         <li><a href="#">Classical</a></li>
                         <li><a href="#">Loft</a></li>
@@ -229,7 +234,7 @@
                             <li>Plumbing plan. equipment</li>
                         </ul></div><button>From 150 rub / m2</button>
                     </div>
-                    <div class="main__section8_box-item">
+                    <div class="main__section8_box-item main__section8_box-item-2">
                     <img src="assets/images/room2_bg8.png" alt="room2(bg8)"><div class="box-item__text"><span>Standard</span>
                         <ul>
                             <li> Measurement drawing</li>
@@ -244,7 +249,7 @@
                     <div class="main__section8_box-item">
                         <img src="assets/images/room3_bg8.png" alt="room3(bg8)"><div class="box-item__text"><span>Full</span>
                             <ul>
-                                <li> Measurement drawing</li>
+                                <li>Measurement drawing</li>
                                 <li>Redevelopment</li>
                                 <li>Layout of furniture</li>
                                 <li>Plan of ceilings</li>
@@ -296,7 +301,7 @@
                             </div>
                         </div>
                         <div>
-                            <div class="main__section9_opacity">
+                            <div class="main__section9_opacity test">
                                 <div class="main__section9_text-white-big2">02</div>
                                 <div class="main__section9_text-yellow-small2">Compilation<br>estimates</div>
                         </div>
@@ -410,16 +415,16 @@
             <div class="main__section11_form">
                 <div class="main__section11_form_text-big">have any questions?</div>
                 <div class="main__section11_form-wrapper">
-                    <form action="">
+                    <form action="#">
                         <div class="main__section11-box">
                             <div><div class="main__section11_form_text">Name</div><input type="text" name="name" placeholder="What is your name:"></div>
                             <div><div class="main__section11_form_text">Phone</div><input type="tel" name="tel" placeholder="Your phone number:"></div>
                         </div>
-                        <div class="main__Section11-padding"><div class="main__section11_form_text">Question</div><input type="text" name="question" placeholder="I want to know:"></div>
+                        <div class="main__section11-padding"><div><div class="main__section11_form_text">Question</div><input type="text" name="question" placeholder="I want to know:"></div></div>
                         <div class="main__section11_checkbox-text">
                                 <input type="checkbox" checked >I agree to the processing of personal data
                         </div>
-                        <div class="main__section11_submit"><input type="submit" name="submit" id="" value="submit"></div>
+                        <div class="main__section11_submit"><input type="submit" name="submit" value="submit"></div>
                     </form>
                 </div>
             </div>
@@ -429,12 +434,12 @@
                     <a href="https://mail.ru/"><div class="main__section11_circle"><img src="assets/images/email.png" alt="email"></div></a>
                     <a href="https://www.instagram.com/"><div class="main__section11_circle"><img src="assets/images/inst.png" alt="inst"></div></a>
                 </div>
-            <div class="main__section11_map"><img src="assets/images/map.png" alt="map"></div>    
+            <div class="main__section11_map"><div><img src="assets/images/map.png" alt="map"></div></div>    
         </div>
     </main>
     <footer class="footer">
-            <div class ="footer__logo_text"><h1 class="footer__logo_text_h1">IC "Repair Design Project"</h1></div>
-            <div class="footer__nav"> <div class="footer__nav_element">HOME</div>
+            <div class ="footer__logo_text"><p class="footer__logo_text_p">IC "Repair Design Project"</p></div>
+            <div class="footer__nav"> <div class="footer__nav_element footer__nav_first">HOME</div>
                                       <div class="footer__nav_element">PROJECTS</div>
                                       <div class="footer__nav_element">MEASUREMENT</div>
                                       <div class="footer__nav_element">TEAM</div>
